--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </section>
 
       <h2>Data Institut Teknologi Sumatera</h2>
+      <table>
         <caption>
           Data ITERA
         </caption>
